feat: add show for order
